--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NGO InterConnect</title>
+    <title>FREE</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/home.css">
@@ -30,14 +30,14 @@
             </div>
         </header>
         <main class="px-3">
-            <h1>NGO InterConnect</h1>
-            <p class="lead"> <br> We at NGO InterConnect aims to join the NGOs to the user and
-               <br> become a bridge to fill the gap between them</p>
-            <a href="/drives" class="btn btn-lg btn-secondary fw-bold bg-white">View Drives</a>
+            <h1>Find Research Exhibit & Explore</h1>
+            <p class="lead"> <br> 
+               <br> </p>
+            <a href="/viewpapers" class="btn btn-lg btn-secondary fw-bold">View Papers</a>
         </main>
 
         <footer class="mt-auto text-white-50">
-            <p>&copy; 2022 NGO InterConnect</p>
+            <p>&copy; 2023 FREE</p>
         </footer>
     </div>
 
