--- a/views/error.ejs
+++ b/views/error.ejs
@@ -7,6 +7,6 @@
             <p class=""><%= err.stack %></p>
             <% } %> 
         </div>
-        <a href="/campgrounds">All Campgrounds</a>
+        <a href="/papers">View Papers</a>
     </div>
 </div>
