--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
-<footer class="footer bg-dark py-3 mt-auto">
+<footer class="footer bg-primary bg-gradient py-2 mt-auto">
     <div class="container">
-        <span class="text-muted">&copy; YelpCamp</span>
+        <span >&copy; FREE</span>
     </div>
 </footer>
