--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YelpCamp</title>
+    <title>FREE</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/home.css">
@@ -16,10 +16,10 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
             <div>
-                <h3 class="float-md-start mb-0">YelpCamp</h3>
+                <h3 class="float-md-start mb-0">FREE</h3>
                 <nav class="nav nav-masthead justify-content-center float-md-end">
-                    <a class="nav-link active" href="#">Home</a>
-                    <a class="nav-link" href="/campgrounds">Campgrounds</a>
+                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="/papers">Research Papers</a>
                     <% if (!currentUser) { %>
                         <a class="nav-link" href="/login">Login</a>
                         <a class="nav-link" href="/register">Register</a>
@@ -30,14 +30,14 @@
             </div>
         </header>
         <main class="px-3">
-            <h1>Yelpcamp</h1>
-            <p class="lead">Welcome to YelpCamp <br> Explore the world and it's many wonders qith our campsites placed all around the world.
-               <br> Share your own campgrounds to tell people about it</p>
-            <a href="/campgrounds" class="btn btn-lg btn-secondary fw-bold bg-white">View Campgrounds</a>
+            <h1>Find Reseach Exibhit and Explore</h1>
+            <p class="lead">Welcome to FREE <br> 
+               <br> </p>
+            <a href="/campgrounds" class="btn btn-lg btn-secondary fw-bold bg-white">View Papers</a>
         </main>
 
         <footer class="mt-auto text-white-50">
-            <p>&copy; 2022 YelpCamp</p>
+            <p>&copy; 2023 FREE</p>
         </footer>
     </div>
 
