--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,36 +1,49 @@
-<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar bg-primary bg-gradient sticky-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/campgrounds">YelpCamp</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand h1 mb-0" href="/">FREE</a>
+        
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/campgrounds">Campgrounds</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/campgrounds/new">New Campground</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav ms-auto">
-                <% if (!currentUser) { %>
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">FREE</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
-                        <a class="nav-link" href="/login">Login</a>
+                        <a class="nav-link" aria-current="page" href="/">Home</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Research Papers
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="/papers">View</a></li>
+                            <li><a class="dropdown-item" href="/papers/new">Upload</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Seminars/Webinars
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Webinar</a></li>
+                            <li><a class="dropdown-item" href="#">Seminar</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/register">Register</a>
+                        <a class="nav-link" aria-current="page" href="/login">Login</a>
                     </li>
-                <% } else { %>
                     <li class="nav-item">
-                        <a class="nav-link" href="/logout">Logout</a>
+                        <a class="nav-link" aria-current="page" href="/register">Register</a>
                     </li>
-                <% } %> 
-            </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="/logout">Logout</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </nav>
