--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -3,46 +3,22 @@
     <div class="row">
         <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
             <div class="card shadow">
-                <img src="https://images.unsplash.com/photo-1534880606858-29b0e8a24e8d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTR8fGNhbXB8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" 
+                <img src="https://images.unsplash.com/photo-1450101499163-c8848c66ca85?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8cmVzZWFyY2glMjBwYXBlcnxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60" 
                     class="card-img-top" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Register</h5>
                     <form action="/register" method="post" class="validated-form" novalidate>
-                        <div class="mb-3">
-                            <label class="form-label" for="username">Username</label>
-                            <input class="form-control" type="text" id="username" placeholder="Enter Username"
-                                autofocus name="username" required>
-                            <div class="valid-feedback">
-                                Looks Good!!
-                            </div>
-                            <div class="invalid-feedback">
-                                Username Required
-                            </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="typeOfUser" id="Organisation" value="ngo">
+                            <label class="form-check-label" for="Organisation">Organisation</label>
                         </div>
-                        <div class="mb-3">
-                            <label class="form-label" for="email">Email</label>
-                            <input class="form-control" type="email" id="email" placeholder="Enter Email"
-                                name="email" required>
-                            <div class="valid-feedback">
-                                Looks Good!!
-                            </div>
-                            <div class="invalid-feedback">
-                                Email Required
-                            </div>
+                        <div class="form-check form-check-inline mb-3">
+                            <input class="form-check-input" type="radio" name="typeOfUser" id="userSelectRadio" value="user" checked>
+                            <label class="form-check-label" for="userSelectRadio">User</label>
                         </div>
-                        <div class="mb-3">
-                            <label class="form-label" for="password">Password</label>
-                            <input class="form-control" type="password" id="password" placeholder="Enter Password"
-                                name="password" required>
-                            <div class="valid-feedback">
-                                Looks Good!!
-                            </div>
-                            <div class="invalid-feedback">
-                                Password Required
-                            </div>
-                        </div>
+                        
                         <div class="d-grid">
-                            <button class="btn btn-success">Register</button>
+                            <button class="btn btn-success">Next</button>
                         </div>
                     </form>
                 </div>
