--- a/views/home.ejs
+++ b/views/home.ejs
@@ -33,7 +33,7 @@
             <h1>Find Reseach Exibhit and Explore</h1>
             <p class="lead">Welcome to FREE <br> 
                <br> </p>
-            <a href="/campgrounds" class="btn btn-lg btn-secondary fw-bold bg-white">View Papers</a>
+            <a href="/papers" class="btn btn-lg btn-secondary fw-bold bg-white">View Papers</a>
         </main>
 
         <footer class="mt-auto text-white-50">
