--- a/views/papers/new.ejs
+++ b/views/papers/new.ejs
@@ -2,11 +2,11 @@
 <div class="row">
     <h1 class="text-center">Add Paper</h1>
     <div class="col-md-6 offset-md-3">
-        <form action="/campgrounds" method="post" novalidate class="validated-form" enctype="multipart/form-data">
+        <form action="/papers" method="post" novalidate class="validated-form" enctype="multipart/form-data">
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
                 <input class="form-control" type="text" id="title" placeholder="Enter Name"
-                    name="campground[title]" required>
+                    name="paper[title]" required>
                 <div class="valid-feedback">
                     Looks Good!!
                 </div>
@@ -22,7 +22,7 @@
             <div class="mb-3">
                 <label class="form-label" for="description">Description</label>
                 <textarea class="form-control" type="text" id="description" placeholder="Enter description"
-                    name="campground[description]" style="height: 160px;" required></textarea>
+                    name="paper[description]" style="height: 160px;" required></textarea>
                 <div class="valid-feedback">
                     Looks Good!!
                 </div>
