--- a/views/seminar/new.ejs
+++ b/views/seminar/new.ejs
@@ -2,7 +2,7 @@
 <div class="row">
     <h1 class="text-center">Add Seminar</h1>
     <div class="col-md-6 offset-md-3">
-        <form action="/seminars" method="post" novalidate class="validated-form" enctype="multipart/form-data">
+        <form action="/seminars" method="post">
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
                 <input class="form-control" type="text" id="title" placeholder="Enter Name"
