--- a/views/webinar/new.ejs
+++ b/views/webinar/new.ejs
@@ -2,17 +2,11 @@
 <div class="row">
     <h1 class="text-center">Add Webinar</h1>
     <div class="col-md-6 offset-md-3">
-        <form action="/webinars" method="post" novalidate class="validated-form" enctype="multipart/form-data">
+        <form action="/webinars" method="post">
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
                 <input class="form-control" type="text" id="title" placeholder="Enter Name"
                     name="webinar[title]" required>
-                <div class="valid-feedback">
-                    Looks Good!!
-                </div>
-                <div class="invalid-feedback">
-                    Name Required
-                </div>
             </div>
             <div class="row">
                 <div class="mb-3 col-md-6">
@@ -20,7 +14,7 @@
                     <input class="form-control" type="date" id="date" placeholder="Enter Date"
                         name="webinar[date]" required>
                 </div>
-
+    
                 <div class="mb-3 col-md-6">
                     <label class="form-label" for="time">Time</label>
                     <input class="form-control" type="time" id="time" placeholder="Enter time" name="webinar[time]"
