--- a/views/webinar/show.ejs
+++ b/views/webinar/show.ejs
@@ -22,9 +22,7 @@
                                     <h5 class="mb-1">Venue</h5>
                                 </div>
                                 <div class="col-sm-8">
-                                    <p class="text-muted mb-0">
-                                        <%= webinar.link %>
-                                    </p>
+                                    <a href="<%= webinar.link %>">Webinar Link</a>
                                 </div>
                             </div>
                             <hr>
